examples/test/testpolicy3110.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3110
  namespace: namespace483
spec:
  podSelector:
    matchLabels:
      key27: value25
      key36: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value25
          key24: value5
      podSelector:
        matchLabels:
          key12: value5
          key8: value43
